format_strings: write first implementation

--- a/alire.toml
+++ b/alire.toml
@@ -8,3 +8,6 @@ maintainers-logins = ["cowile"]
 licenses = "GPL-3.0-or-later"
 website = "https://github.com/cowile/format_strings"
 tags = ["format", "formatting", "strings", "templates"]
+
+[build-switches]
+"*" . ada_version = "ada2022"
