--- a/alire.toml
+++ b/alire.toml
@@ -1,6 +1,6 @@
 name = "format_strings"
 description = "Build and print formatted strings"
-version = "0.1.0-dev"
+version = "0.1.0"
 
 authors = ["Colton Lewis"]
 maintainers = ["Colton Lewis <colton.w.lewis@protonmail.com>"]
