Add test command

--- a/alire.toml
+++ b/alire.toml
@@ -11,3 +11,8 @@ tags = ["format", "formatting", "strings", "templates"]
 
 [build-switches]
 "*" . ada_version = "ada2022"
+
+[[actions]]
+type = "test"
+command = ["alr", "run"]
+directory = "tests"
